[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-service"
version = "0.1.0"
description = "FastAPI Transaction Service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Tom Newson", email = "newsontom@outlook.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI"
]
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "duckdb==1.3.2",
  "python-multipart==0.0.20",
  "Faker==37.5.3"
]

[project.optional-dependencies]
dev = ["pytest==8.4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
